--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <canvas id="text" width="700" height="200"></canvas>
 
 <div id="html-text" class="text">
-  IT DEPENDS
+  ROOPASHREE SHETTY
 </div>
 body {
   background: #222;
