--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <canvas id="text" width="700" height="200"></canvas>
-
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <div id="html-text" class="text">
   ROOPASHREE SHETTY
 </div>
