--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 <canvas id="text" width="700" height="200"></canvas>
 <head>
   <link rel="stylesheet" href="styles.css">
@@ -5,3 +11,6 @@
 <div id="html-text" class="text">
   ROOPASHREE SHETTY
 </div>
+</body>
+</html>
+
