--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <canvas id="text" width="700" height="200"></canvas>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <div id="html-text" class="text">
   ROOPASHREE SHETTY
