--- a/index.html
+++ b/index.html
@@ -1,13 +1,104 @@
 <!DOCTYPE html>
-<html>
+<!--
+Template Name: Basend
+Author: <a href="http://www.os-templates.com/">OS Templates</a>
+Author URI: http://www.os-templates.com/
+Licence: Free to use under our free template licence terms
+Licence URI: http://www.os-templates.com/template-terms
+-->
+<html lang="">
 <head>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+<title>DREAMFIESTA</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
-<body>
-<canvas id="text" width="700" height="200"></canvas>
-<div id="html-text" class="text">
-  ROOPASHREE SHETTY
+<body id="top">
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- Top Background Image Wrapper -->
+<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/01.jpg');"> 
+  <!-- ################################################################################################ -->
+  <div class="wrapper row1">
+    <header id="header" class="hoc clear"> 
+      <!-- ################################################################################################ -->
+      <div id="logo" class="fl_left">
+        <h1><a href="index.html">DREAMFIESTA</a></h1>
+      </div>
+      <nav id="mainav" class="fl_right">
+        <ul class="clear">
+          <li class="active"><a href="index.html">Home</a></li>
+        </ul>
+      </nav>
+      <!-- ################################################################################################ -->
+    </header>
+  </div>
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <!-- ################################################################################################ -->
+  <section id="pageintro" class="hoc clear">
+    <div> 
+      <!-- ################################################################################################ -->
+      <h2 class="heading">Event Organizer</h2>
+      <p>event organizers.</p>
+      <footer><a class="btn" href="#">Home</a></footer>
+      <!-- ################################################################################################ -->
+    </div>
+  </section>
+  <!-- ################################################################################################ -->
 </div>
+<!-- End Top Background Image Wrapper -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<div class="wrapper row2">
+  <section class="hoc container clear"> 
+    <!-- ################################################################################################ -->
+    <div class="sectiontitle">
+      <h6 class="heading">test</h6>
+      <p>test</p>
+    </div>
+    <ul class="nospace group services">
+      <li class="one_quarter">
+        <article><a href="#"><i class="fa fa-3x fa-puzzle-piece"></i></a>
+          <h6 class="heading font-x1"><a href="#">Vivamus</a></h6>
+          <p>test</p>
+        </article>
+      </li>
+      <li class="one_quarter">
+        <article><a href="#"><i class="fa fa-3x fa-ravelry"></i></a>
+          <h6 class="heading font-x1"><a href="#">test</a></h6>
+          <p>test</p>
+        </article>
+      </li>
+    </ul>
+    <!-- ################################################################################################ -->
+    <div class="clear"></div>
+  </section>
+</div>
+<div class="wrapper overlay coloured">
+  <section class="hoc container clear"> 
+    <!-- ################################################################################################ -->
+    <div class="sectiontitle">
+      <h6 class="heading">Dreamfiesta</h6>
+      <p>We.......................</p>
+    </div>
+    <!-- ################################################################################################ -->
+    <div class="clear"></div>
+  </section>
+</div>
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+    <!-- ################################################################################################ -->
+    <div class="clear"></div>
+  </section>
+</div>
+<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
+<!-- JAVASCRIPTS -->
+<script src="layout/scripts/jquery.min.js"></script>
+<script src="layout/scripts/jquery.backtotop.js"></script>
+<script src="layout/scripts/jquery.mobilemenu.js"></script>
 </body>
 </html>
