--- a/index.html
+++ b/index.html
@@ -1,104 +1,191 @@
 <!DOCTYPE html>
-<!--
-Template Name: Basend
-Author: <a href="http://www.os-templates.com/">OS Templates</a>
-Author URI: http://www.os-templates.com/
-Licence: Free to use under our free template licence terms
-Licence URI: http://www.os-templates.com/template-terms
--->
-<html lang="">
+<html lang="en">
 <head>
-<title>DREAMFIESTA</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+  <title>Bootstrap Website Tutorial</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+.navbar {
+	margin-bottom: 0;
+	margin-radius: 0;
+	background-color: #5E4482;
+	color: #fff;
+	padding: 1% 0;
+	font-size: 1.2em;
+	border: 0;
+}
+.navbar-brand {
+	float: left;
+	min-height: 55px;
+	padding: 0 15px 5px;
+}
+.navbar-inverse .navbar-nav .active a, .navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover {
+		color: #fff;
+		background-color: #5E4482
+}
+.carousel-caption{
+	top: 50%;
+	transform: translateY(-50%);
+	text-transform: uppercase;
+}
+.btn {
+	font-size: 18px;
+	color: #fff;
+	padding: 12px 22px;
+	background: #5E4482;
+	border: 2px solid #fff;
+}
+.container {
+	margin: 4% auto;
+}
+#icon{
+	max-width: 200px;
+	margin: 1% auto;
+}
+footer {
+	width: 100%;
+	background-color: #5E4482;
+	padding: 3%;
+	color: #fff;
+}
+.fa {
+	padding: 15px;
+	font-size: 25px;
+	color: #fff;
+}
+.fa:hover {
+	color: #d5d5d5;
+	text-decoration: none;
+}
+@media (max-width: 900px){
+	.fa{
+		font-size: 20px;
+		padding: 10px;
+	}
+}
+@media (max-width: 600px){
+	.carousel-caption{
+		display: none;
+	}
+	#icon {
+		max-width: 150px;
+	}
+	h4 {
+		font-size: 1.7em;
+	}
+}
+
+
+
+  </style>
 </head>
-<body id="top">
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/01.jpg');"> 
-  <!-- ################################################################################################ -->
-  <div class="wrapper row1">
-    <header id="header" class="hoc clear"> 
-      <!-- ################################################################################################ -->
-      <div id="logo" class="fl_left">
-        <h1><a href="index.html">DREAMFIESTA</a></h1>
-      </div>
-      <nav id="mainav" class="fl_right">
-        <ul class="clear">
-          <li class="active"><a href="index.html">Home</a></li>
-        </ul>
-      </nav>
-      <!-- ################################################################################################ -->
-    </header>
-  </div>
-  <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
-  <section id="pageintro" class="hoc clear">
-    <div> 
-      <!-- ################################################################################################ -->
-      <h2 class="heading">Event Organizer</h2>
-      <p>event organizers.</p>
-      <footer><a class="btn" href="#">Home</a></footer>
-      <!-- ################################################################################################ -->
-    </div>
-  </section>
-  <!-- ################################################################################################ -->
+<body>
+<nav class="navbar navbar-inverse">
+	<div class="container-fluid">
+	<div class="navbar-header">
+	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+		<span class="icon-bar"></span>
+	    <span class="icon-bar"></span>
+	    <span class="icon-bar"></span>
+	    <span class="icon-bar"></span>
+	</button>
+	    <a class="navbar-brand href="#"><img src="img/w3newbie.png">
+	  </div>
+	    <div class="collapse navbar-collapse" id="myNavbar">
+	    <ul class="nav navbar-nav navbar-right">
+	    	<li class="active"><a href="#">Home</a></li>
+	    	<li ><a href="#">About-us</a></li>
+	    	<li ><a href="#">Contact-us</a></li>
+	    </ul>
+	    </div>
+		
+	</div>
+</nav>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<ol class="carousel-indicators">
+	<li data-target="myCarousel" data-slide-to="0" class="active"></li>
+	<li data-target="myCarousel" data-slide-to="1" ></li>
+	<li data-target="myCarousel" data-slide-to="2" ></li>
+</ol>
+<div class="carousel-inner" role="listbox">
+	<div class="item active">
+		<img src="img/mountains.png">
+		<div class="carousel-caption">
+			<h1>get to know</h1>
+			<br>
+			<button type="button" class="btn btn-default">Get started</button>
+		</div>
+	</div><!-------End Active------>
+	<div class="item">
+		<img src="img/snow.png">
+	</div>
+		<div class="item">
+		<img src="img/red.png">
+	</div>
 </div>
-<!-- End Top Background Image Wrapper -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row2">
-  <section class="hoc container clear"> 
-    <!-- ################################################################################################ -->
-    <div class="sectiontitle">
-      <h6 class="heading">test</h6>
-      <p>test</p>
-    </div>
-    <ul class="nospace group services">
-      <li class="one_quarter">
-        <article><a href="#"><i class="fa fa-3x fa-puzzle-piece"></i></a>
-          <h6 class="heading font-x1"><a href="#">Vivamus</a></h6>
-          <p>test</p>
-        </article>
-      </li>
-      <li class="one_quarter">
-        <article><a href="#"><i class="fa fa-3x fa-ravelry"></i></a>
-          <h6 class="heading font-x1"><a href="#">test</a></h6>
-          <p>test</p>
-        </article>
-      </li>
-    </ul>
-    <!-- ################################################################################################ -->
-    <div class="clear"></div>
-  </section>
+	<!---Start Slider Control---->
+<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	<span class="sr-only">Previous</span>
+</a>
+<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	<span class="sr-only">Next</span>
+</a>
+</div><!-------------End of slider ---->
+<div class="container text-center">
+	<h2>what we are listing</h2>
+	<div class="row">
+		<div class="col-sm-6">
+			<img src="img/css3.png" id="icon">
+			<h4>TEST1</h4>
+		</div>
+		<div class="col-sm-6">
+			<img src="img/css3.png" id="icon">
+			<h4>TEST2</h4>
+		</div>
+	</div>
 </div>
-<div class="wrapper overlay coloured">
-  <section class="hoc container clear"> 
-    <!-- ################################################################################################ -->
-    <div class="sectiontitle">
-      <h6 class="heading">Dreamfiesta</h6>
-      <p>We.......................</p>
-    </div>
-    <!-- ################################################################################################ -->
-    <div class="clear"></div>
-  </section>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6">
+			<h4>Headding</h4>
+			<p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+			</p>
+			<p>
+				is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially 
+			</p>
+		</div>
+		<div class="col-md-6">
+		<img src="img/boot.jpg" class="img-responsive">
+		</div>
+	</div>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-    <!-- ################################################################################################ -->
-    <div class="clear"></div>
-  </section>
-</div>
-<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
-<!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
+<footer class="container-fluid text-center">
+	<div class="row">
+		<div class="col-sm-4">
+		<h3>Contact Us</h3>
+		<p>555554121215</p>
+		<br>
+		<h4>Our address and contact info</h4>
+	    </div>
+	    <div class="col-sm-4">
+        <h3>Connect</h3>
+        <a href="https://www.facebook.com/clicks03" class="fa fa-facebook"></a>
+         <a href="#" class="fa fa-twitter"></a>
+         <a href="#" class="fa fa-google"></a>
+	    </div>
+	    <div class="col-sm-4">
+        <img src="img/bunny.png" class="icon">
+	    </div>
+	</div>
+</footer>
+
+
+
 </body>
 </html>
