--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ footer {
 </a>
 </div><!-------------End of slider ---->
 <div class="container text-center">
-	<h2>what we are listing</h2>
+	<h2>...</h2>
 	<div class="row">
 		<div class="col-sm-6">
 			<img src="img/css3.png" id="icon">
@@ -153,12 +153,19 @@ footer {
 <div class="container">
 	<div class="row">
 		<div class="col-md-6">
-			<h4>Headding</h4>
-			<p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-			</p>
-			<p>
-				is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially 
-			</p>
+			<p>We craft and execute memorable fiestas for your big day.</p>
+			<p>We offer wide range of solutions from personal events to corporate events and wedding plans</p>
+			<h3>Our Services</h3>
+			<p>Birthday Parties</p>
+			<p>Naming Ceremony</p>
+			<p>Engagements</p>
+			<p>Marriage Functions</p>
+			<p>Photography And Videography</p>
+			<p>Baby Shower</p>
+			<p>Themed Events</p>
+			<p>Product Launch</p>
+			<p>Conferncindianes & Seminars</p>
+			<p></p>
 		</div>
 		<div class="col-md-6">
 		<img src="img/boot.jpg" class="img-responsive">
@@ -169,9 +176,9 @@ footer {
 	<div class="row">
 		<div class="col-sm-4">
 		<h3>Contact Us</h3>
-		<p>555554121215</p>
+		<p>7899143756 / 8660322063</p>
+		<p>Bangalore</p>
 		<br>
-		<h4>Our address and contact info</h4>
 	    </div>
 	    <div class="col-sm-4">
         <h3>Connect</h3>
