--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Website Tutorial</title>
+  <title>DreamFiesta</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -141,7 +141,7 @@ footer {
 	<h2>...</h2>
 	<div class="row">
 		<div class="col-sm-6">
-			<img src="img/css3.png" id="icon">
+			<img src="img/css3.png" id="icon" >
 			<h4>TEST1</h4>
 		</div>
 		<div class="col-sm-6">
@@ -155,8 +155,8 @@ footer {
 		<div class="col-md-6">
 			<p>We craft and execute memorable fiestas for your big day.</p>
 			<p>We offer wide range of solutions from personal events to corporate events and wedding plans</p>
-			<h3>Our Services</h3>
-			<p>Birthday Parties</p>
+			<h3 class="font-weight-bold">Our Services</h3>
+			<p class="font-weight-bold">Birthday Parties</p>
 			<p>Naming Ceremony</p>
 			<p>Engagements</p>
 			<p>Marriage Functions</p>
