--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@ footer {
 	font-size: 25px;
 	color: #fff;
 }
+.paraleft {
+	font-family: cursive;
+	color: #84848A;
+	font-size: 200%
+}
+.headding-style{
+	text-decoration: underline;
+	text-shadow: 2px 2px #7B9190
+}
 .fa:hover {
 	color: #d5d5d5;
 	text-decoration: none;
@@ -138,25 +147,23 @@ footer {
 </a>
 </div><!-------------End of slider ---->
 <div class="container text-center">
-	<h2>...</h2>
 	<div class="row">
 		<div class="col-sm-6">
 			<img src="img/css3.png" id="icon" >
 			<h4>TEST1</h4>
 		</div>
-		<div class="col-sm-6">
-			<img src="img/css3.png" id="icon">
-			<h4>TEST2</h4>
+		<div class="col-md-6" class="paraleft">
+			<span class="paraleft"><p>We craft and execute memorable fiestas for your big day.</p></span>
+			<br>
+			<span class="paraleft"><p>We offer wide range of solutions from personal events to corporate events and wedding plans</p></span>
 		</div>
 	</div>
 </div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-6">
-			<p>We craft and execute memorable fiestas for your big day.</p>
-			<p>We offer wide range of solutions from personal events to corporate events and wedding plans</p>
-			<h3 class="font-weight-bold">Our Services</h3>
-			<p class="font-weight-bold">Birthday Parties</p>
+			<h1 class="headding-style">Our Services</h1>
+			<p>Birthday Parties</p>
 			<p>Naming Ceremony</p>
 			<p>Engagements</p>
 			<p>Marriage Functions</p>
