--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ footer {
 	<div class="item active">
 		<img src="img/mountains.png">
 		<div class="carousel-caption">
-			<h1>get to know</h1>
+<!---			<h1>get to know</h1>
 			<br>
-			<button type="button" class="btn btn-default">Get started</button>
+			<button type="button" class="btn btn-default">Get started</button> -->
 		</div>
 	</div><!-------End Active------>
 	<div class="item">
