--- a/index.html
+++ b/index.html
@@ -107,8 +107,6 @@ footer {
 	    <div class="collapse navbar-collapse" id="myNavbar">
 	    <ul class="nav navbar-nav navbar-right">
 	    	<li class="active"><a href="#">Home</a></li>
-	    	<li ><a href="#">About-us</a></li>
-	    	<li ><a href="#">Contact-us</a></li>
 	    </ul>
 	    </div>
 		
@@ -189,7 +187,7 @@ footer {
 	    </div>
 	    <div class="col-sm-4">
         <h3>Connect</h3>
-        <a href="https://www.facebook.com/clicks03" class="fa fa-facebook"></a>
+        <a href="https://www.facebook.com/drmfiesta" class="fa fa-facebook"></a>
          <a href="#" class="fa fa-twitter"></a>
          <a href="#" class="fa fa-google"></a>
 	    </div>
