--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
     <div class="col-md-5 col-md-offset-1">
       <div class="section-title">
-        <p>For inquiries or collaborations please contact me by email at <strong>dreamfiesta@outlook.com</strong> or fill out the form below.</p>
+        <p>For inquiries or collaborations please contact me by email at <strong>dreamfiesta@outlook.co</strong> or fill out the form below.</p>
       </div>
       <form name="sentMessage" id="contactForm" novalidate>
         <div class="row">
@@ -219,7 +219,7 @@
 </div>
 <div id="footer">
   <div class="container">
-    <p>&copy; 2016 Jonathan Doe. All rights reserved.</p>
+    <p>&copy;All rights reserved.</p>
   </div>
 </div>
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
