--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
     <div class="section-title">
       <h2>Portfolio</h2>
     </div>
-    <div class="categories">
-      <ul class="cat">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+    </div>
+      <ul class="nav navbar-nav">
         <li>
           <ol class="type">
             <li><a href="#" data-filter="*" class="active">All</a></li>
@@ -68,6 +71,8 @@
           </ol>
         </li>
       </ul>
+        </div>
+</nav>
     </div>
     <div class="row">
       <div class="portfolio-items">
