--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
     <div class="section-title">
       <h2>Portfolio</h2>
     </div>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-    </div>
-      <ul class="nav navbar-nav">
+    <div class="categories">
+      <ul class="cat">
         <li>
           <ol class="type">
             <li><a href="#" data-filter="*" class="active">All</a></li>
@@ -71,8 +68,6 @@
           </ol>
         </li>
       </ul>
-        </div>
-</nav>
     </div>
     <div class="row">
       <div class="portfolio-items">
